test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/scalar_expressions/void_condition_while_loop.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[39]:
  void
  identifier(f)
  (
  void
  )
  {
  return
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(i)
  =
  const int(0)
  ;
  while
  (
  (
  void
  )
  const int(10)
  )
  {
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  ;
  }
  return
  const int(0)
  ;
  }
